--- a/kharazmi.css
+++ b/kharazmi.css
@@ -4,12 +4,12 @@ body {
     background-image: url("ثبت نام خوارزمی.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: rigth;
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: rigth;
+    align-items: rigth;
     height: 100vh;
 }
 
